feat: fork release and version support updates