@@ -1,15 +1,11 @@
-import org.jreleaser.model.Active
-
 plugins {
     `java-library`
     `maven-publish`
     id("com.gradleup.shadow") version "8.3.6"
-    id("org.jreleaser") version "1.18.0"
-    signing
 }
 
 group = "com.cjcrafter"
-version = "0.7.4-SNAPSHOT"
+version = "0.7.4-ladakx-SNAPSHOT"
 
 repositories {
     mavenCentral()
@@ -31,13 +27,17 @@ dependencies {
 
 java {
     toolchain {
-        languageVersion.set(JavaLanguageVersion.of(8))
+        languageVersion.set(JavaLanguageVersion.of(17))
     }
     withSourcesJar()
     withJavadocJar()
 }
 
 tasks {
+    withType<JavaCompile>().configureEach {
+        options.release.set(8)
+    }
+
     shadowJar {
         archiveFileName.set("FoliaScheduler-$version.jar")
         archiveClassifier.set("")
@@ -75,6 +75,7 @@ tasks {
 
     test {
         useJUnitPlatform()
+        jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
     }
 }
 
@@ -122,103 +123,8 @@ publishing {
     // upload the maven repo using jReleaser
     repositories {
         maven {
-            name = "stagingDeploy"
-            url = layout.buildDirectory.dir("staging-deploy").map { it.asFile.toURI() }.get()
-        }
-    }
-}
-
-jreleaser {
-    project {
-        name.set("FoliaScheduler")
-        group = "com.cjcrafter"
-        version = project.version.get()
-        description = "Task scheduler for Spigot and Folia plugins"
-        authors.add("Collin Barber <collinjbarber@gmail.com>")
-        license = "MIT" // SPDX identifier
-
-        java {
-            groupId = "com.cjcrafter"
-            artifactId = "foliascheduler"
-            version = project.version.get()
-        }
-    }
-
-    signing {
-        active.set(Active.ALWAYS)
-        armored.set(true)
-    }
-
-    deploy {
-        maven {
-            mavenCentral {
-                create("releaseDeploy") {
-                    active.set(Active.RELEASE)
-                    url.set("https://central.sonatype.com/api/v1/publisher")
-                    // run `./gradlew publish` before deployment
-                    stagingRepository("build/staging-deploy")
-                    // Credentials (JRELEASER_MAVENCENTRAL_USERNAME, JRELEASER_MAVENCENTRAL_PASSWORD or JRELEASER_MAVENCENTRAL_TOKEN)
-                    // will be picked up from ~/.jreleaser/config.toml
-                }
-            }
-
-            nexus2 {
-                create("sonatypeSnapshots") {
-                    active.set(Active.SNAPSHOT)
-                    url.set("https://central.sonatype.com/repository/maven-snapshots/")
-                    snapshotUrl.set("https://central.sonatype.com/repository/maven-snapshots/")
-                    applyMavenCentralRules = true
-                    snapshotSupported = true
-                    closeRepository = true
-                    releaseRepository = true
-                    stagingRepository("build/staging-deploy")
-                }
-            }
-        }
-    }
-
-    project {
-        snapshot {
-            fullChangelog.set(true)
-        }
-    }
-
-    release {
-        github {
-            repoOwner.set("CJCrafter")
-            name.set("FoliaScheduler")
-            host.set("github.com")
-
-            val isSnapshot = project.version.get().endsWith("-SNAPSHOT")
-            releaseName.set(if (isSnapshot) "SNAPSHOT" else "v${project.version.get()}")
-            tagName.set("v{{projectVersion}}")
-            draft.set(false)
-            skipTag.set(isSnapshot)
-            overwrite.set(false)
-            update { enabled.set(isSnapshot) }
-
-            prerelease {
-                enabled.set(isSnapshot)
-                pattern.set(".*-SNAPSHOT")
-            }
-
-            commitAuthor {
-                name.set("Collin Barber")
-                email.set("collinjbarber@gmail.com")
-            }
-
-            changelog {
-                formatted.set(Active.ALWAYS)
-                preset.set("conventional-commits")
-                format.set("- {{commitShortHash}} {{commitTitle}}")
-                contributors {
-                    enabled.set(true)
-                    format.set("{{contributorUsernameAsLink}}")
-                }
-                hide {
-                    contributors.set(listOf("[bot]"))
-                }
-            }
+            name = "localBuildRepo"
+            url = layout.buildDirectory.dir("local-maven-repo").map { it.asFile.toURI() }.get()
         }
     }
 }
